<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/value_1" />

        <Button
            android:id="@+id/button2"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/value_2" />

        <Button
            android:id="@+id/button3"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/value_3" />

        <Button
            android:id="@+id/button4"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/value_4" />

        <Button
            android:id="@+id/button5"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/value_5" />

        <Button
            android:id="@+id/button6"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/value_6" />

        <Button
            android:id="@+id/button7"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/value_7" />

        <Button
            android:id="@+id/button8"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/value_8" />

        <Button
            android:id="@+id/button9"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/value_9" />

        <Button
            android:id="@+id/button0"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/value_0" />

        <Button
            android:id="@+id/button_plus"
            android:layout_column="3"
            android:layout_row="0"
            android:backgroundTint="@color/design_default_color_secondary"
            android:text="@string/value_plus" />

        <Button
            android:id="@+id/button_minus"
            android:layout_column="3"
            android:layout_row="1"
            android:backgroundTint="@color/design_default_color_secondary"
            android:text="@string/value_minus" />

        <Button
            android:id="@+id/button_multi"
            android:layout_column="3"
            android:layout_row="2"
            android:backgroundTint="@color/design_default_color_secondary"
            android:text="@string/value_multi" />

        <Button
            android:id="@+id/button_div"
            android:layout_column="3"
            android:layout_row="3"
            android:backgroundTint="@color/design_default_color_secondary"
            android:text="@string/value_div" />

        <Button
            android:id="@+id/button_equal"
            android:layout_column="2"
            android:layout_row="3"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:text="@string/value_equal" />

        <Button
            android:id="@+id/button_clear"
            android:layout_column="0"
            android:layout_row="3"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:text="@string/value_clear" />
    </GridLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="end"
        android:lines="1"
        android:text="@string/value_0"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/grid"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/formula"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="start"
        android:lines="1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/result"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>